--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 publishdir = "docs"
 static = "/static"
 builddrafts = false
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
 # Replace this with your website URL
 baseurl = "https://hes.pzhao.org/"
 canonifyurls = true
