--- a/config.toml
+++ b/config.toml
@@ -32,7 +32,7 @@ tag = "tags"
     weight = 1
 
   [[params.slogan_columns]]
-    title = "ECOLOGY"
+    title = "Ecology"
     text =  "- Biodiversity – mechanisms - human influences  \n- Landscape changes – urbanization – rural farming  \n- Community ecology – species interactions – trophic dynamics"
 #    link = "/about"
 #    link_text = "Meet the team"
