--- a/config.toml
+++ b/config.toml
@@ -24,25 +24,40 @@ tag = "tags"
   slogan = "HES"
   slogan_text = "Health and Environmental Sciences"
 
-  [[params.slogan_columns]]
-    title = "Environmental Pollution"
-    text = "- Soil nutrients and pollution – interactions & bioavailability  \n- Air pollution – aerosol processes – air quality – human health  \n- Soils to plants – nutrition/heavy metals – human health  \n- Pollutants across interfaces – soil/water/air/biota/humans"
+#  [[params.slogan_columns]]
+#    title = "Environmental Pollution"
+#    text = "- Soil nutrients and pollution – interactions & bioavailability  \n- Air pollution – aerosol processes – air quality – human health  \n- Soils to plants – nutrition/heavy metals – human health  \n- Pollutants across interfaces – soil/water/air/biota/humans"
 #    link = "/mission"
 #    link_text = "Read more"
-    weight = 1
+#    weight = 1
 
-  [[params.slogan_columns]]
-    title = "Ecology"
-    text =  "- Biodiversity – mechanisms - human influences  \n- Landscape changes – urbanization – rural farming  \n- Community ecology – species interactions – trophic dynamics"
+#  [[params.slogan_columns]]
+#    title = "Ecology"
+#    text =  "- Biodiversity – mechanisms - human influences  \n- Landscape changes – urbanization – rural farming  \n- Community ecology – species interactions – trophic dynamics"
 #    link = "/about"
 #    link_text = "Meet the team"
-    weight = 2
+#    weight = 2
 
-  [[params.slogan_columns]]
-    title = "Public Health"
+#  [[params.slogan_columns]]
+#    title = "Public Health"
 #    text = "- Epidemiology  \n - Biostatistics"
 #    link = "/approach"
 #    link_text = "Read more"
+#    weight = 3
+
+  [[params.slogan_columns]]
+    title = "People"
+    text = "- Academic Staff [link](/#members)  \n- Support Team [link](/post/support_team)  \n- PhD Students [link](/post/students/)  \n- Alumni [link](/post/alumni)"
+    weight = 1
+
+  [[params.slogan_columns]]
+    title = "Work"
+    text = "- Research [link](/#projects)  \n- Publications [link](/#publications) \n- Projects [link](/post/projects)  \n- Modules [link](/post/module)"
+    weight = 2
+    
+  [[params.slogan_columns]]
+    title = "Log"
+    text = "- News [link](/post)  \n- Lab [link](https://heslab.pzhao.org/)  \n- About [link](/about)  \n- Contact [link](/#contact)"
     weight = 3
 
   # Selected Publications section.
