--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ tag = "tags"
 #    weight = 3
 
   [[params.slogan_columns]]
-    title = "People"
+    title = "Our"
     text = "- Academic Staff [link](/#members)  \n- Support Team [link](/post/support_team)  \n- PhD Students [link](/post/students/)  \n- Alumni [link](/post/alumni)"
     weight = 1
 
@@ -57,7 +57,7 @@ tag = "tags"
     weight = 2
     
   [[params.slogan_columns]]
-    title = "Log"
+    title = "Matters"
     text = "- News [link](/post)  \n- Lab [link](https://heslab.pzhao.org/)  \n- About [link](/about)  \n- Contact [link](/#contact)"
     weight = 3
 
