--- a/config.toml
+++ b/config.toml
@@ -61,7 +61,7 @@ defaultContentLanguageInSubdir = true
     
   [[params.slogan_columns]]
     title = "Matters"
-    text = "- News [link](/#posts)  \n- Events [link](/post/events)  \n- Lab [link](https://heslab.pzhao.org/)  \n- About [link](/about)  \n- Contact [link](/#contact)"
+    text = "- News [link](/#posts)  \n- Events [link](/post/events)  \n- Lab [link](https://heslab.pzhao.org/)  \n- Admissions [link](/post/admissions)  \n- About [link](/about)  \n- Contact [link](/#contact)"
     weight = 3
 
   # Selected Publications section.
@@ -198,7 +198,7 @@ defaultContentLanguageInSubdir = true
     
   [[languages.zh.params.slogan_columns]]
     title = "和其他"
-    text = "- 新闻 [link](/zh/#posts)  \n- 活动 [link](/zh/post/events)  \n- 实验室 [link](https://heslab.pzhao.org/)  \n- 关于 [link](/zh/about)  \n- 联系我们 [link](/zh/#contact)"
+    text = "- 新闻 [link](/zh/#posts)  \n- 活动 [link](/zh/post/events)  \n- 实验室 [link](https://heslab.pzhao.org/)  \n- 关于 [link](/zh/about)  \n- 招生 [link](/zh/post/admissions)  \n- 联系我们 [link](/zh/#contact)"
     weight = 3
 
   # Selected Publications section.
